--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^8.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "mckenziearts/laravel-notify": "^2.5"
+        "nesbot/carbon": "^3.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
